--- a/package.json
+++ b/package.json
@@ -16,23 +16,29 @@
     "npm": "5.8.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "4.16.3",
+    "helmet": "^3.13.0",
     "mongodb": "3.0.7",
+    "mongoose": "^5.2.9",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-hot-loader": "4.1.2"
   },
   "devDependencies": {
-    "babel-core": "6.26.2",
-    "babel-loader": "7.1.4",
-    "babel-preset-env": "1.6.1",
+    "babel-core": "^6.26.2",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "nodemon": "1.17.3",
-    "webpack": "4.6.0",
-    "webpack-cli": "2.0.15",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
     "webpack-dev-middleware": "3.1.2",
     "webpack-hot-middleware": "2.22.1",
-    "webpack-node-externals": "1.7.2"
+    "webpack-node-externals": "^1.7.2"
   }
 }
